--- a/GM Tienda/src/components/Navbar/Navbar.module.css
+++ b/GM Tienda/src/components/Navbar/Navbar.module.css
@@ -2,7 +2,11 @@
 aside {
     background-color: #333;
     width: 200px;
+    height: 100vh;
     padding: 20px;
+    position: fixed;
+    top:0;
+    left:0;
 }
 
 nav {
