--- a/GM Tienda/src/App.css
+++ b/GM Tienda/src/App.css
@@ -1,12 +1,15 @@
 
 #root {
-  max-width: 1280px;
+  background-color: aquamarine;
+  padding: 20px;
+  width: 100%;
+  height: 100vh;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+
 }
 
 body, html {
   margin: 0;
   padding: 0;
+  
 }
