--- a/GM Tienda/src/components/ItemCounter/ItemCounter.module.css
+++ b/GM Tienda/src/components/ItemCounter/ItemCounter.module.css
@@ -1,21 +1,23 @@
 
 
 
-.article {
-    display: flex;
-    flex-direction: column;
+article {
+
+    border: 1px solid black;
+
     align-items: center;
     margin-bottom: 1rem;
 }
 
 h3 {
+    
     font-size: 1.5rem;
     margin-bottom: 0.5rem;
 }
 
-.button {
-    background-color: violet; 
-    color: #fff; 
+article button {
+    background-color: rgb(126, 9, 126); 
+    color: aliceblue;
     border: none;
     padding: 0.5rem 1rem;
     cursor: pointer; 
@@ -23,6 +25,7 @@ h3 {
     margin: 0.5rem; 
 }
 
-.button:hover {
-    background-color: #00b39b;
+article button:hover {
+    color: aliceblue;
+    background-color: #34006e;
 }
