--- a/GM Tienda/src/components/Navbar/Navbar.module.css
+++ b/GM Tienda/src/components/Navbar/Navbar.module.css
@@ -7,13 +7,15 @@ header {
     position: fixed;
     top:0;
     left:0;
+    display: flex;
+    flex-direction: column;
 }
 
 nav {
     margin-top: 20px;
 }
 
-.a {
+a {
     display: block;
     color: #fff;
     text-decoration: none;
@@ -42,5 +44,3 @@ h4 {
     margin: 0;
 }
 
-
-  
