--- a/GM Tienda/src/App.css
+++ b/GM Tienda/src/App.css
@@ -3,7 +3,6 @@
   background-color: aquamarine;
   padding: 20px;
   width: 100%;
-  height: 100vh;
   margin: 0 auto;
 
 }
@@ -13,3 +12,77 @@ body, html {
   padding: 0;
   
 }
+
+
+.itemList {
+
+  display: flex ;
+  flex-wrap: wrap ;
+  justify-content: space-around;
+}
+
+
+
+.Card {
+
+  width: 300px; 
+  border: 3px solid #000000; 
+  border-radius: 8px; 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+  padding: 20px;
+  margin-bottom: 20px; 
+  background-color: #fff;
+}
+
+.Card:hover {
+  transform: scale(1.007); 
+  transition: transform 0.3s ease; 
+  box-shadow: 3px 3px 10px rgb(32, 4, 4);}
+
+
+.Card h2 {
+  color: blue;
+  font-size: rem;
+  margin-bottom: 10px; 
+  }
+
+.Card h3 {
+  font-size: 0.8rem; 
+  color: #888;
+  margin-bottom: 10px; 
+}
+
+.Card h4 {
+  font-size: 1.2rem; 
+  color: #555;
+  margin-bottom: 10px; 
+}
+
+.Card img.thumb {
+  width: 100%; 
+  height: auto; 
+  margin-bottom: 15px; 
+}
+
+.Card p.description {
+  font-size: 1rem; 
+  color: #666;
+  margin-bottom: 15px; 
+  }
+
+.Card button {
+  background-color: #007bff; 
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px; 
+  cursor: pointer; 
+}
+
+.Card button a {
+  text-decoration: none; 
+  color: #fff; 
+}
+
+
+
