--- a/GM Tienda/src/components/ItemList/ItemList.module.css
+++ b/GM Tienda/src/components/ItemList/ItemList.module.css
@@ -1,12 +1,10 @@
-.itemList {
 
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-
+section
 
 .Card {
+  flex: 1 0 calc(25% - 20px); /* Tamaño de 25% con margen entre elementos */
+  margin: 10px;
+  display: inline;
 
   width: 300px; 
   border: 1px solid #ccc; 
@@ -20,7 +18,7 @@
 .Card h2 {
   font-size: 1.5rem;
   margin-bottom: 10px; 
-  }
+}
 
 .Card h3 {
   font-size: 1.2rem; 
@@ -44,7 +42,7 @@
   font-size: 1rem; 
   color: #666;
   margin-bottom: 15px; 
-  }
+}
 
 .Card button {
   background-color: #007bff; 
