--- a/GM Tienda/src/App.css
+++ b/GM Tienda/src/App.css
@@ -14,6 +14,19 @@ body, html {
 }
 
 
+  article {
+    margin-bottom: 20px; 
+  }
+  
+  article p {
+    color: rgb(197, 173, 173);
+    font-size: 26px;
+    font-style: italic;
+    line-height: 1.5;
+    margin-bottom: 10px;
+  }
+  
+
 .itemList {
 
   display: flex ;
@@ -86,3 +99,41 @@ body, html {
 
 
 
+.ItemDetail {
+  text-align: center; 
+  background-color: aliceblue;
+  border: 5px solid black;
+}
+
+
+  .ItemDetail img {
+    width: 100%; 
+    height: 300px; 
+    object-fit: cover; 
+    opacity: 0.7;}
+
+
+  .TagContainer {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .TagButton {
+    display: inline-block;
+    padding: 5px 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    border: 2px solid #black;
+    border-radius: 20px; 
+    background-color: transparent; 
+    color: # rgb(126, 9, 126); 
+    text-decoration: none; }
+  
+  .TagButton:hover {
+    cursor: pointer;
+
+    background-color: rgb(126, 9, 126) !important; 
+    color: white; 
+  }
+  
+  
