--- a/GM Tienda/src/App.css
+++ b/GM Tienda/src/App.css
@@ -125,7 +125,7 @@ body, html {
     margin-bottom: 10px;
     border: 2px solid #black;
     border-radius: 20px; 
-    background-color: transparent; 
+    background-color transparent; 
     color: # rgb(126, 9, 126); 
     text-decoration: none; }
   
