--- a/GM Tienda/src/App.css
+++ b/GM Tienda/src/App.css
@@ -3,6 +3,7 @@
   background-color: aquamarine;
   padding: 20px;
   width: 100%;
+  height: auto;
   margin: 0 auto;
 
 }
@@ -13,19 +14,22 @@ body, html {
   
 }
 
+h1 {
+  text-align: center;
+}
 
-  article {
-    margin-bottom: 20px; 
-  }
-  
-  article p {
-    color: rgb(197, 173, 173);
-    font-size: 26px;
-    font-style: italic;
-    line-height: 1.5;
-    margin-bottom: 10px;
-  }
-  
+article {
+  margin-bottom: 20px; 
+}
+
+article p {
+  color: rgb(197, 173, 173);
+  font-size: 26px;
+  font-style: italic;
+  line-height: 1.5;
+  margin-bottom: 10px;
+}
+
 
 .itemList {
 
@@ -106,34 +110,33 @@ body, html {
 }
 
 
-  .ItemDetail img {
-    width: 100%; 
-    height: 300px; 
-    object-fit: cover; 
-    opacity: 0.7;}
+.ItemDetail img {
+  width: 100%; 
+  height: 300px; 
+  object-fit: cover; 
+  opacity: 0.7;}
 
 
-  .TagContainer {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .TagButton {
-    display: inline-block;
-    padding: 5px 10px;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    border: 2px solid #black;
-    border-radius: 20px; 
-    background-color transparent; 
-    color: # rgb(126, 9, 126); 
-    text-decoration: none; }
-  
-  .TagButton:hover {
-    cursor: pointer;
+.TagContainer {
+  display: flex;
+  flex-wrap: wrap;
+}
 
-    background-color: rgb(126, 9, 126) !important; 
-    color: white; 
-  }
-  
-  
+.TagButton {
+  display: inline-block;
+  padding: 5px 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  border: 2px solid #black;
+  border-radius: 20px; 
+  background-color transparent; 
+  color: # rgb(126, 9, 126); 
+  text-decoration: none; }
+
+.TagButton:hover {
+  cursor: pointer;
+
+  background-color: rgb(126, 9, 126) !important; 
+  color: white; 
+}
+
