--- a/GM Tienda/src/App.css
+++ b/GM Tienda/src/App.css
@@ -143,25 +143,25 @@ article p {
   text-align: center;
   background-color: aliceblue;
   border: 5px solid black;
-  width: 200px; /* Ancho del componente */
-  margin: 10px; /* Espaciado exterior */
-  display: flex; /* Activar el modelo de caja flexible */
-  flex-direction: column; /* Alinear elementos verticalmente */
-  justify-content: center; /* Centrar verticalmente */
+  width: 200px;
+  margin: 10px; 
+  display: flex; 
+  flex-direction: column; 
+  justify-content: center;
 }
 
 .CartItemImage {
   width: 100%;
-  height: 150px; /* Altura de la imagen */
+  height: 150px; 
   object-fit: cover;
   opacity: 0.7;
 }
 
 .CartItemContainer {
   display: flex;
-  justify-content: center; /* Centrar horizontalmente */
-  align-items: center; /* Centrar verticalmente */
+  justify-content: center; 
+  align-items: center;
 }
 .CartItemDetails {
-  flex-grow: 1; /* Permite que los detalles ocupen todo el espacio restante */
+  flex-grow: 1; 
 }
