--- a/GM Tienda/src/components/CheckoutForm/CheckoutForm.module.css
+++ b/GM Tienda/src/components/CheckoutForm/CheckoutForm.module.css
@@ -19,3 +19,17 @@ input {
 margin-left: 10px;
 }
 
+button {
+    background-color: rgb(126, 9, 126) !important; 
+    color: aliceblue;
+    border: none;
+    padding: 0.5rem 1rem;
+    cursor: pointer; 
+    border-radius: 4px;
+    margin: 0.5rem; 
+}
+
+button:hover {
+    color: aliceblue;
+    background-color: #34006e !important;
+}
